# Strilas

./: .gitignore  CLAUDE.md  README.md  STRILAS-SYSTEM-GUIDE.md  freerouting.json  system.md
docs/: gen_engagement_sim.py  gen_mounting.py  gen_sim.py  hardware-analysis.md  level3-ballistic-architecture.md  mvp-shooting-test-bom.md  phase1-engagement-model.md  phase1-feasibility-sim.md  phase1-weapon-vest.md  system-flowchart.md
firmware/: README.md  __init__.py  adjudicator.py  anticheat.py  ballistics.py  benchmark.py  compute_budget.py  compute_budget_cm5.py  config.py  cv_pose.py  engine.py  fire_control.py  hal.py  mesh.py  protocol.py  run_demo.py  run_mesh.py  target_node.py  test_chain.py  test_mesh.py  transport.py  vest_mb_hw.py  weapon_node.py  world_sim.py
firmware-esp/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware-esp/main/: CMakeLists.txt  node_optik.c  node_target.c  strilas_main.c
hardware/: HELMET-REWORK-TODO.md  README.md  add_3a_override.py  add_fiducials.py  add_motor_keepout.py  add_p4_silk.py  add_silk_name.py  audit_board.py  build_vest.sh  build_weapon.sh  camera-selection.md  cap-sampler.kicad_pcb  cap-sampler.kicad_prl  cap-sampler.kicad_pro  cap_sampler.py  common-sampler.kicad_pcb  common-sampler.kicad_prl  common-sampler.kicad_pro  common_sampler.py  connector-sampler.kicad_pcb  connector-sampler.kicad_prl  connector-sampler.kicad_pro  connector_sampler.py  cost-estimate.md  detector_ring_layout.py  dfm_check.py  dsn_power_class.py  erm-coin-3d.step  esp-c6-sampler.kicad_pcb  esp_c6_sampler.py  export_stack_step.py  (+155 more)
(+240 files in other folders)
